HUE-6077 [editor] Improve hover effect on the result tab actions

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -318,7 +318,7 @@
   -ms-transition: filter 0.2s ease;
 }
 
-.inactive-action:hover .snippet-icon-image {
+.inactive-action:hover > .snippet-icon-image {
   -webkit-filter: grayscale(0);
   -webkit-filter: grayscale(0%);
   filter: grayscale(0%);
@@ -334,7 +334,7 @@
   transition: color 0.2s ease;
 }
 
-.inactive-action:hover .snippet-icon {
+.inactive-action:hover > .snippet-icon {
   color: @hue-primary-color-dark !important;
 }
 
