--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -757,25 +757,41 @@
   text-align: center;
 }
 
-.context-sample th {
-  border-right: 1px solid #e5e5e5;
+.context-sample {
+  text-align: left;
+  padding: 3px;
+  overflow: hidden;
+  height: 100%;
+
+  th {
+    border-right: 1px solid #e5e5e5;
+  }
+
+  td {
+    border-right: 1px solid #e5e5e5;
+    white-space: nowrap;
+  }
+
+  .fixed-first-column {
+    margin-top: 3px;
+    margin-left: 0 !important;
+  }
+
+  .fixed-header-row {
+    border-bottom: 1px solid #e5e5e5;
+  }
+
+  .fixed-first-cell {
+    border-right: 1px solid #e5e5e5;
+    margin-left: -1px;
+
+    thead th {
+      height: 23px;
+      border-bottom: 1px solid #e5e5e5 !important;
+    }
+  }
 }
 
-.context-sample td {
-  border-right: 1px solid #e5e5e5;
-  white-space: nowrap;
-}
-
-.context-sample .fixed-first-column {
-  margin-top: -1px;
-}
-
-.context-sample .fixed-header-row {
-  border-bottom: 1px solid #e5e5e5;
-}
-
-.context-sample .fixed-first-cell {
-  border-right: 1px solid #e5e5e5;
-  margin-top: -1px;
-  margin-left: -1px;
+.sql-context-flex-fill.context-sample-container {
+  margin: 0;
 }
