--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -898,6 +898,10 @@ h4.header {
 .history-table tbody tr {
   border-left: 2px solid transparent;
   border-right: 2px solid transparent;
+
+  td {
+    vertical-align: middle;
+  }
 }
 
 .history-table tbody tr:hover {
