HUE-6077 [frontend] Improve the styling of the tab search for query history and saved queries

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -1023,13 +1023,13 @@ h4.header {
   font-size: 11px;
 }
 
-.history-filter {
-  border-radius: 9px !important;
+.inline-tab-filter {
+  border-radius: 5px !important;
   min-height: 17px !important;
   height: 17px !important;
-  margin-right: 5px;
-  margin-left: -5px;
-  padding-right: 18px !important;
+  margin-right: 3px;
+  margin-left: -2px;
+  padding: 0 18px 0 5px !important;
 }
 
 .no-horiz-padding a {
