HUE-6077 [frontend] Drop the border from .container-fluid
(cherry picked from commit d8d4ab947a0d6753d0539cf946ad5961ccb42370)

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -16,8 +16,7 @@
  limitations under the License.
 */
 .container-fluid {
-  border-left: none;
-  border-right: none;
+  border: none;
   margin-left: 0;
   margin-right: 0;
 }
