HUE-6087 [core] Add pauseable and resumeable intervals to the window object
(cherry picked from commit 68821b0709dde183f138673d970cd2965a366733)

--- a/desktop/core/src/desktop/templates/jasmineRunner.html
+++ b/desktop/core/src/desktop/templates/jasmineRunner.html
@@ -61,6 +61,7 @@
   <script type="text/javascript" src="../static/desktop/js/jquery.migration.js"></script>
   <script type="text/javascript" src="../static/desktop/js/hue.colors.js"></script>
   <script type="text/javascript" src="../static/desktop/js/hue.utils.js"></script>
+  <script type="text/javascript" src="../static/desktop/js/hue4.utils.js"></script>
   <script type="text/javascript" src="../static/desktop/ext/js/jquery/plugins/jquery.total-storage.min.js"></script>
   <script type="text/javascript" src="../static/desktop/js/ace/ace.js"></script>
   <script type="text/javascript" src="../static/desktop/js/ace/ext-language_tools.js"></script>
@@ -75,8 +76,8 @@
   <script type="text/javascript" src="../static/desktop/ext/js/jasmine-2.3.4/boot.js"></script>
   <script type="text/javascript" src="../static/desktop/ext/js/jasmine-2.3.4/mock-ajax.js"></script>
 
-  <script type="text/javascript" src="../static/desktop/js/hue.utils.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/hueUtilsSpec.js"></script>
+  <script type="text/javascript" src="../static/desktop/spec/hue4UtilsSpec.js"></script>
 
   <script type="text/javascript" src="../static/desktop/spec/apiHelperSpec.js"></script>
 
