HUE-6092 [autocomplete] Extract parser js logic to a separate file
With this we can make changes to some of the parser logic without having to rebuild the parser

--- a/desktop/core/src/desktop/templates/jasmineRunner.html
+++ b/desktop/core/src/desktop/templates/jasmineRunner.html
@@ -96,7 +96,7 @@
   <script type="text/javascript" src="../static/desktop/js/hdfsAutocompleter.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/hdfsAutocompleterSpec.js"></script>
 
-
+  <script type="text/javascript" src="../static/desktop/js/autocomplete/sqlParseSupport.js"></script>
   <script type="text/javascript" src="../static/desktop/js/autocomplete/sql.js"></script>
   <script type="text/javascript" src="../static/desktop/spec/autocomplete/sqlSpec.js"></script>
 
