--- a/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue3-extra.less
@@ -119,7 +119,7 @@
   -moz-border-radius: 0;
 }
 
-.hue3-navbar-fixed-top {
+.hue-title-bar {
   position: fixed;
   right: 0;
   left: 0;
@@ -128,11 +128,11 @@
   top: 28px;
 }
 
-.hue3-navbar-fixed-top.nokids .navbar-inner {
+.hue-title-bar.nokids .navbar-inner {
   height: 45px;
 }
 
-.hue3-navbar-fixed-top .navbar-inner {
+.hue-title-bar .navbar-inner {
   padding-right: 24px;
   -webkit-border-radius: 0;
   -moz-border-radius: 0;
