HUE-6077 [frontend] Style the compose menu

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -24,10 +24,11 @@
 .navbar .navbar-inner {
   padding-right: 24px;
 
-  li {
+  ul.nav li {
     margin-right: 10px;
   }
-  li a:hover {
+
+  ul.nav li a:hover {
     background-color: transparent;
   }
 }
