--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -123,7 +123,7 @@ body {
 }
 
 .compose-action:hover .btn {
-  background-color: rgba(240, 240, 240, 0.6);
+  background-color: rgba(240, 240, 240, 0.6) !important;
 }
 
 .compose-action .btn {
