HUE-6121 [frontend] Fix issue with compose menu icon colors and switch to svg icons for Hive and Impala

--- a/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cross-version.less
@@ -28,6 +28,14 @@
   cursor: pointer;
 }
 
+.svg-app-icon {
+  fill: @hue-primary-color-dark;
+  height: 24px !important; //conflicts with nv.d3.css
+  width: 24px !important; //conflicts with nv.d3.css
+  display: inline-block !important; //conflicts with nv.d3.css
+  vertical-align: middle;
+}
+
 .app-header a {
   font-size: 20px !important;
   color: @hue-primary-color-dark !important;
