--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -182,12 +182,28 @@ body {
   margin: -1px 2px 0 -7px;
 }
 
+.compose-action svg {
+  margin: 0 2px -4px -7px;
+  display: inline-block !important; // Conflicts with nv.d3.css
+}
+
 .compose-action .dropdown-menu i {
+  margin: -1px 2px 0 -7px;
+}
+
+.compose-action .dropdown-menu i,
+.compose-action .dropdown-menu svg {
   color: @hue-primary-color-dark;
+  fill: @hue-primary-color-dark;
   height: 18px;
   width: 18px;
   font-size: 14px;
-  margin: -1px 2px 0 -7px;
+}
+
+.compose-action a:hover i,
+.compose-action a:hover svg {
+  color: @cui-white;
+  fill: @cui-white;
 }
 
 .dropdown-no-icon {
