HUE-6077 [frontend] Fix double icon issue in assist search results
(cherry picked from commit f37d8c45564f754fb7e3e9174747c8291a03b0b1)

--- a/desktop/core/src/desktop/static/desktop/less/hue-assist.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-assist.less
@@ -504,7 +504,7 @@
   border-radius: 6px;
 }
 
-.result-entry .icon-col {
+.result-entry .left-col {
   width: 35px;
   float:left;
   vertical-align: top;
