HUE-6077 [frontend] Improve background color for multi-level dropdowns

--- a/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue-cui-overrides.less
@@ -32,3 +32,17 @@
     background-color: transparent;
   }
 }
+
+.dropdown-submenu:hover > a,
+.dropdown-submenu:focus > a {
+  background-image: none !important;
+  background-color: @cui-blue-500;
+
+  > i {
+    color: @cui-white !important;
+  }
+
+  > svg {
+    fill: @cui-white !important;
+  }
+}
