HUE-6125 [sqoop] Port to Hue 4
(cherry picked from commit fcbd271a1dc91bb473f2b398ad3a914f1c58dbe3)

--- a/desktop/core/src/desktop/static/desktop/less/hue.less
+++ b/desktop/core/src/desktop/static/desktop/less/hue.less
@@ -879,6 +879,11 @@ a:visited {
   z-index: 3000 !important;
 }
 
+/* sqoop */
+.top-bar {
+  position: initial!important;
+}
+
 /* context panel */
 /* TODO: Positioning and clean-up */
 .context-panel {
