HUE-6077 [frontend] Fix input alignment issue in tab headers
(cherry picked from commit a608d0f962cf8ffe8146c751a053311f72cd4d94)

--- a/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
+++ b/desktop/libs/notebook/src/notebook/static/notebook/less/notebook.less
@@ -1028,8 +1028,7 @@
     border-radius: 5px !important;
     min-height: 17px !important;
     height: 17px !important;
-    margin-right: 3px;
-    margin-left: -2px;
+    margin: 0 3px 0 -2px;
     padding: 0 18px 0 5px !important;
   }
 
